feat: 真假值和条件控制

--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -6,19 +6,59 @@
    "source": [
     "# 字典\n",
     "\n",
-    "字典是`可变类型`但非`序列类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n"
+    "字典是`可变类型`但非`序列类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "\n",
+    "字典的键必须是不可变的，所以字符串、数字、元组都可以作为字典的 key\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 字典字面量操作\n"
+    "## 字典基本操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 创建一个字典\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1: None, '4': None}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 通过字面值方式\n",
+    "{\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
+    "\n",
+    "# 使用内置方法创建，参数接收列表、元组、集合\n",
+    "dict.fromkeys({1, \"4\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,15 +67,12 @@
        "{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 字典的键必须是不可变的，所以字符串、数字、元组都可以作为字典的 key\n",
-    "d1 = {\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
-    "\n",
     "d1[\"foo\"]  # 读字典的一个属性值\n",
     "\n",
     "d1[(\"bar\", 8)] = \"tt\"  # 值更新\n",
@@ -49,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,12 +113,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 字典创建\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 字典内置方法/标准库操作\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 浅拷贝\n",
+    "\n",
+    "拷贝深入讲解在这节 [深拷贝 & 浅拷贝]('./copy.ipynb')\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -90,117 +143,27 @@
        "{}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 清空\n",
-    "d3.clear()\n",
-    "d3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 浅拷贝\n"
+    "d3.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'x1': {'x2': {'x3': 4}}, 'y1': 1} False\n",
-      "1 11 False\n",
-      "{'x2': 22} {'x2': 22} True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 浅拷贝：只深拷贝一级元素，子对象依然是原始字典对应引用\n",
-    "\n",
-    "d4 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
-    "\n",
-    "d4c_deep = d4.copy()\n",
-    "\n",
-    "print(d4c_deep, id(d4) == id(d4c_deep))  # d4 和 d4c_deep 内存地址不同\n",
-    "\n",
-    "# 修改一级元素的值\n",
-    "d4c_deep[\"y1\"] = 11\n",
-    "\n",
-    "# 一级元素值不等，内存地址也不同\n",
-    "print(d4[\"y1\"], d4c_deep[\"y1\"], d4[\"y1\"] is d4c_deep[\"y1\"])\n",
-    "\n",
-    "# 修改二级元素的值\n",
-    "d4c_deep[\"x1\"][\"x2\"] = 22\n",
-    "\n",
-    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
-    "print(d4[\"x1\"], d4c_deep[\"x1\"], d4[\"x1\"] is d4c_deep[\"x1\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 深拷贝\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'x1': {'x2': {'x3': 4}}, 'y1': 1} False\n",
-      "1 11 False\n",
-      "{'x2': {'x3': 4}} {'x2': 22} False\n"
-     ]
-    }
-   ],
-   "source": [
-    "from copy import deepcopy\n",
-    "\n",
-    "d5 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
-    "\n",
-    "d5c_deep = deepcopy(d5)\n",
-    "\n",
-    "print(d5c_deep, id(d5) == id(d5c_deep))  # d5 和 d5c_deep 内存地址不同\n",
-    "\n",
-    "# 修改一级元素的值\n",
-    "d5c_deep[\"y1\"] = 11\n",
-    "\n",
-    "# 一级元素值不等，内存地址也不同\n",
-    "print(d5[\"y1\"], d5c_deep[\"y1\"], d5[\"y1\"] is d5c_deep[\"y1\"])\n",
-    "\n",
-    "# 修改二级元素的值\n",
-    "d5c_deep[\"x1\"][\"x2\"] = 22\n",
-    "\n",
-    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
-    "print(d5[\"x1\"], d5c_deep[\"x1\"], d5[\"x1\"] is d5c_deep[\"x1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{('bar', 8): 'tt', 'new': 'new'}\""
+       "\"{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}\""
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +183,7 @@
        "{1: None, 's': None, ('t', 3): None}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +213,7 @@
        "[('a', 2)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +234,7 @@
        "['a']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +255,7 @@
        "[2]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +276,7 @@
        "{'foo': 5, ('bar', 8): 'tt', 'new': 'new', 'a': 2}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +297,7 @@
        "5"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,13 +317,24 @@
        "('a', 2)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d1.popitem()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 清空\n",
+    "d3.clear()\n",
+    "d3"
    ]
   }
  ],
