--- a/src/python3_course_for_devs/notebooks/judgment.ipynb
+++ b/src/python3_course_for_devs/notebooks/judgment.ipynb
@@ -8,8 +8,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `if`\n",
+    "\n",
+    "```py\n",
+    "if 判断条件:\n",
+    "    执行语句\n",
+    "```\n",
+    "\n",
+    "`if` 后的判断条件为真则执行下面的语句，这里的“真”和“假”不是单纯的布尔类型的 `True` 和 `False`，而是逻辑上的真假值\n",
+    "\n",
+    "关于真假值请务必阅读[真假值]('./bool.ipynb')这节的内容\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,16 +37,27 @@
     }
    ],
    "source": [
-    "def performance(score):\n",
-    "    if score >= 9:\n",
-    "        return \"A\"\n",
-    "    elif score >= 8:\n",
-    "        return \"B\"\n",
-    "    else:\n",
-    "        return \"C\"\n",
+    "### `if elif else`\n",
     "\n",
+    "score = 8.5\n",
     "\n",
-    "print(performance(8.5))"
+    "if score >= 9:\n",
+    "    print(\"A\")\n",
+    "elif score >= 8:\n",
+    "    print(\"B\")\n",
+    "else:\n",
+    "    print(\"C\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `match case`\n",
+    "\n",
+    "`match case` 使用严格匹配规则，也就是值和类型都要匹配\n",
+    "\n",
+    "tip：`_` 可以匹配所有条件\n"
    ]
   },
   {
@@ -47,17 +74,14 @@
     }
    ],
    "source": [
-    "def performance(score):\n",
-    "    match score:\n",
-    "        case 100:\n",
-    "            return \"保持热爱\"\n",
-    "        case 0 | 1:\n",
-    "            return \"建议说唱\"\n",
-    "        case _:\n",
-    "            return \"继续努力\"\n",
-    "\n",
-    "\n",
-    "print(performance(30))"
+    "score = 30\n",
+    "match score:\n",
+    "    case 100:\n",
+    "        print(\"保持热爱\")\n",
+    "    case 0 | 1:\n",
+    "        print(\"建议说唱\")\n",
+    "    case _:\n",
+    "        print(\"继续努力\")"
    ]
   }
  ],
