--- a/src/python3_course_for_devs/notebooks/set.ipynb
+++ b/src/python3_course_for_devs/notebooks/set.ipynb
@@ -4,12 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 集合\n"
+    "# 集合\n",
+    "\n",
+    "集合即非`序列类型`也非`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "\n",
+    "它是一个无序但不重复的数据结构\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建一个集合\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,37 +29,56 @@
        "{(2, 't'), 3, 'a'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s1 = {\"a\", 3, (2, \"t\"), 3}\n",
-    "s1"
+    "# 使用大括号包裹的元素集合\n",
+    "{\"a\", 3, (2, \"t\"), 3}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 增删改查\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(3, 4), 3, 'add'}"
+       "{(3, 4), 3, 'a', 'add'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s2 = set()  # 空集合\n",
-    "s2.add(\"add\")\n",
-    "s2.update({3, (3, 4)})\n",
-    "s2"
+    "s = {\"a\", 3, (2, \"t\"), 3}\n",
+    "\n",
+    "# 增\n",
+    "s.add(\"add\")\n",
+    "\n",
+    "# 删\n",
+    "s.remove(3)\n",
+    "s.discard(3)\n",
+    "s.pop()\n",
+    "\n",
+    "# 改\n",
+    "s.update({3, (3, 4)})\n",
+    "\n",
+    "# 查\n",
+    "\n",
+    "s"
    ]
   },
   {
