--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -30,17 +30,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 作用域\n",
+    "## 作用域\n",
     "\n",
-    "- 函数作用域\n",
-    "- 全局作用域\n"
+    "- 全局作用域\n",
+    "- 局部作用域\n",
+    "  - [函数]('./function.ipynb')\n",
+    "  - 类\n",
+    "  - with 语句\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 命名空间\n"
+    "### 全局作用域\n",
+    "\n",
+    "全局作用域（Global Scope）是指在整个程序中都可访问的最外层作用域。在全局作用域中定义的变量和函数具有全局范围，可以在程序的任何地方被引用和使用。\n",
+    "\n",
+    "在 Python 中，全局作用域是在模块级别定义的作用域。它在模块被导入时创建，并在整个程序执行期间一直存在。全局作用域包含了在全局作用域中定义的变量、函数和类等对象。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在这个代码片段中，x 是一个全局变量，它可以在这个代码片段的任何位置被访问\n",
+    "x = 1\n",
+    "\n",
+    "\n",
+    "def test():\n",
+    "    # 在函数内部调用全局变量 x\n",
+    "    print(x)\n",
+    "\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 局部作用域\n",
+    "\n",
+    "局部作用域（Local Scope）是指在程序中某个特定代码块内部可访问的作用域。局部作用域通常由函数、类等代码块创建。\n",
+    "\n",
+    "在局部作用域中定义的变量只能在其所属的代码块内部使用，超出该代码块的范围后就无法直接访问。每当进入一个新的代码块时，就会创建一个新的局部作用域。当离开该代码块时，局部作用域也会被销毁。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    y = 1\n",
+    "    print(y)\n",
+    "\n",
+    "\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    z = 3  # 类作用域\n",
+    "\n",
+    "\n",
+    "Test().z"
    ]
   }
  ],
