--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -181,7 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 数字运算\n"
+    "## 数字运算\n",
+    "\n",
+    "tip：整数与浮点数运算，结果为浮点数\n"
    ]
   },
   {
@@ -207,7 +209,7 @@
     "# 除法 / 返回的是浮点数\n",
     "9 / 2  # 4.5\n",
     "\n",
-    "# 地板除法 // 向下取整，如果被除数和除数都为整数，则结果为整数，否则为浮点数\n",
+    "# 地板除法 // 向下取整\n",
     "9 // 2  # 4\n",
     "9.0 // 2  # 4.0\n",
     "\n",
