--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -89,22 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test():\n",
+    "    # 函数 test 形成局部作用域\n",
     "    y = 1\n",
-    "    print(y)\n",
     "\n",
     "\n",
     "test()"
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +112,15 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Test:\n",
-    "    z = 3  # 类作用域\n",
+    "    # 类 Test 形成局部作用域\n",
+    "    z = 3\n",
     "\n",
     "\n",
     "Test().z"
