--- a/src/python3_course_for_devs/notebooks/copy.ipynb
+++ b/src/python3_course_for_devs/notebooks/copy.ipynb
@@ -4,38 +4,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 深拷贝 &（浅拷贝 vs 赋值操作）\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 值拷贝 & 引用拷贝\n",
+    "\n",
+    "- 值拷贝：根据原始对象的值创建一个新的对象，新对象和原始对象值相等，内存地址不同，修改其中一个对象不会对另一个对象产生任何影响。\n",
+    "- 引用拷贝：创建一个原始对象的新引用，而不是创建一个新的对象。基于原始对象创建的引用都指向原始对象的内存地址，对引用的任何操作都会同步到原始对象上。\n",
+    "\n",
+    "注意：只有`可变类型`数据才能进行引用拷贝，`非可变类型`数据只能进行值拷贝。关于`可变 & 不可变类型`看这节：[数据类型]('./types.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 深拷贝\n",
     "\n",
-    "深拷贝是创建一个新的对象，将原始对象的所有属性和内容复制到新对象中，两个对象完全独立，修改一个对象不会影响另一个对象。\n",
-    "\n",
-    "深拷贝可以理解为值拷贝，而非可变数据的拷贝都是深拷贝\n"
+    "即值拷贝\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, [3, 3]]\n",
+      "[1, [2, 3], 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "from copy import deepcopy\n",
+    "import copy\n",
     "\n",
-    "d5 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
+    "original_data = [2, [3, 3]]\n",
     "\n",
-    "d5c_deep = deepcopy(d5)\n",
+    "# 深拷贝\n",
+    "deep_copied_data = copy.deepcopy(original_data)\n",
     "\n",
-    "print(d5c_deep, id(d5) == id(d5c_deep))  # d5 和 d5c_deep 内存地址不同\n",
+    "deep_copied_data[0] = 1\n",
+    "deep_copied_data[1][0] = 2\n",
+    "deep_copied_data.append(4)\n",
     "\n",
-    "# 修改一级元素的值\n",
-    "d5c_deep[\"y1\"] = 11\n",
+    "# 新对象和原始对象完全独立，更改互不影响\n",
+    "print(original_data)\n",
+    "print(deep_copied_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 赋值操作\n",
     "\n",
-    "# 一级元素值不等，内存地址也不同\n",
-    "print(d5[\"y1\"], d5c_deep[\"y1\"], d5[\"y1\"] is d5c_deep[\"y1\"])\n",
+    "- 对于不可变类型，对原始对象进行值拷贝。\n",
+    "- 对于可变类型，对原始对象进行引用拷贝。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, [2, 3], 4]\n",
+      "[1, [2, 3], 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_data = [2, [3, 3]]\n",
     "\n",
-    "# 修改二级元素的值\n",
-    "d5c_deep[\"x1\"][\"x2\"] = 22\n",
+    "# 赋值操作\n",
+    "copied_data = original_data\n",
     "\n",
-    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
-    "print(d5[\"x1\"], d5c_deep[\"x1\"], d5[\"x1\"] is d5c_deep[\"x1\"])"
+    "copied_data[0] = 1\n",
+    "copied_data[1][0] = 2\n",
+    "copied_data.append(4)\n",
+    "\n",
+    "print(original_data)\n",
+    "print(copied_data)"
    ]
   },
   {
@@ -44,42 +103,56 @@
    "source": [
     "## 浅拷贝\n",
     "\n",
-    "而在浅拷贝中，只有最外层的对象被复制，内部的对象仍然是原始对象和副本对象共享的。换句话说，浅拷贝只复制了对象的引用，而不是对象本身。这意味着，如果修改了原始对象中的可变对象，浅拷贝的副本也会受到影响。\n",
-    "\n",
-    "注意：只有`可变类型`数据才能进行浅拷贝，`非可变类型`数据的拷贝都是值拷贝\n"
+    "- 对于不可变类型，对原始对象进行值拷贝。\n",
+    "- 对于可变类型，浅拷贝会创建一个与原始对象同类型的新的空对象，然后将原始对象的元素复制到新对象中，如果元素为不可变类型，则进行值拷贝，如果元素为可变类型，则进行引用拷贝。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, [2, 3]]\n",
+      "[1, [2, 3], 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 浅拷贝：只深拷贝一级元素，子对象依然是原始字典对应引用\n",
+    "original_data = [2, [3, 3]]\n",
     "\n",
-    "d4 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
+    "# 浅拷贝\n",
+    "shallow_copied_data = original_data.copy()\n",
     "\n",
-    "d4c_deep = d4.copy()\n",
+    "shallow_copied_data[0] = 1\n",
+    "shallow_copied_data[1][0] = 2  # 元素 [3, 3] 是可变类型，所以元素采用引用拷贝\n",
+    "shallow_copied_data.append(4)  # 浅拷贝会基于原始对象创建一个同类型新的空对象，所以 4 仅新增在新对象上\n",
     "\n",
-    "print(d4c_deep, id(d4) == id(d4c_deep))  # d4 和 d4c_deep 内存地址不同\n",
-    "\n",
-    "# 修改一级元素的值\n",
-    "d4c_deep[\"y1\"] = 11\n",
-    "\n",
-    "# 一级元素值不等，内存地址也不同\n",
-    "print(d4[\"y1\"], d4c_deep[\"y1\"], d4[\"y1\"] is d4c_deep[\"y1\"])\n",
-    "\n",
-    "# 修改二级元素的值\n",
-    "d4c_deep[\"x1\"][\"x2\"] = 22\n",
-    "\n",
-    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
-    "print(d4[\"x1\"], d4c_deep[\"x1\"], d4[\"x1\"] is d4c_deep[\"x1\"])"
+    "print(original_data)\n",
+    "print(shallow_copied_data)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
