--- a/src/python3_course_for_devs/notebooks/function.ipynb
+++ b/src/python3_course_for_devs/notebooks/function.ipynb
@@ -4,57 +4,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 函数\n",
-    "\n",
-    "函数大家都熟悉，那就直接看 python 中函数长什么样吧\n"
+    "# 函数\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一个简单的函数\n"
+    "## 一个简单的函数\n",
+    "\n",
+    "下面声明一个非常简单的函数，它接收一个姓名参数，并返回打招呼信息，python 函数的基本写法就是这样\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello, world\n",
-      "hello, 李华\n",
-      "hello, 李华\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'hello, 李华'"
+       "'你好, 永强'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 定义函数 hello，接收一个参数 name，类型为字符串，默认值为“小帅”\n",
-    "# 函数里拼接了一个字符串，打印并返回\n",
-    "def hello(name: str = \"小帅\"):\n",
-    "    ret = f\"你好, {name}\"\n",
-    "    print(ret)\n",
-    "    return ret\n",
+    "def hello(name):\n",
+    "    return f\"你好, {name}\"\n",
     "\n",
     "\n",
-    "# 不传参则打印默认参数\n",
-    "hello()\n",
-    "hello(\"永强\")\n",
-    "hello(name=\"永强\")"
+    "hello(\"永强\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 参数\n",
+    "\n",
+    "函数传参实际上是一次赋值操作。对于`可变类型`是引用拷贝，对于`不可变类型`是值拷贝，具体解释看[拷贝]('./copy.ipynb')这节\n",
+    "\n",
+    "如果参数没有默认值，则参数是必传参数，如果有默认值，那么参数不必传\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
