--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -125,6 +125,47 @@
     "except StopIteration:\n",
     "    print(\"迭代器对象已遍历完\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生成器\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 end\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):  # 生成器函数 - 斐波那契\n",
+    "    a, b, counter = 0, 1, 0\n",
+    "    while True:\n",
+    "        if counter > n:\n",
+    "            return\n",
+    "        yield a\n",
+    "        a, b = b, a + b\n",
+    "        counter += 1\n",
+    "\n",
+    "\n",
+    "f = fibonacci(10)  # f 是一个迭代器，由生成器返回生成\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        print(next(f), end=\" \")\n",
+    "    except StopIteration:\n",
+    "        print(\"end\")\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
