--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -11,35 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 迭代器 & 迭代器对象\n",
+    "## 迭代器\n",
     "\n",
-    "迭代器是一个实现了 `__iter__` 和 `__next__` 方法的对象。`__iter__` 方法返回迭代器对象自身，而 `__next__` 方法返回迭代器中的下一个元素，当迭代器中没有元素可供返回时，`__next__` 方法引发 `StopIteration` 异常\n",
+    "迭代器（Iterator）是一种对象，它允许按照一定顺序逐个访问集合或序列中的元素，而不需要事先知道整个集合的内容。迭代器提供了一种惰性计算（lazy evaluation）的方式，只在需要时生成或提供下一个元素。\n",
     "\n",
-    "迭代器对象既可以通过循环遍历来使用，也可以通过 `next` 方法逐个访问元素。在使用循环遍历迭代器对象时，循环会自动调用迭代器的 `__next__` 方法来获取下一个元素，直到迭代结束。\n",
-    "\n",
-    "可通过 `iter` 方法获取可迭代对象\n"
+    "迭代器既可以通过循环遍历，也可以通过 `next` 方法逐个访问元素。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 这些可迭代类型都可以通过 iter 方法生成一个迭代器对象\n",
-    "\n",
-    "str.__iter__  # 字符串\n",
-    "tuple.__iter__  # 元组\n",
-    "list.__iter__  # 列表\n",
-    "set.__iter__  # 集合\n",
-    "dict.__iter__  # 字典\n",
-    "bytearray.__iter__  # 字节数组\n",
-    "bytes.__iter__  # 字节串"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +31,7 @@
       "2\n",
       "3\n",
       "4\n",
-      "迭代器对象已遍历完\n"
+      "迭代器遍历完成\n"
      ]
     }
    ],
@@ -58,29 +39,33 @@
     "try:\n",
     "    list = [1, 2, 3, 4]\n",
     "\n",
-    "    # 根据列表生成迭代器对象\n",
+    "    # 生成列表迭代器\n",
     "    it = iter(list)\n",
     "\n",
-    "    # 通过 for 循环遍历迭代器对象元素\n",
+    "    # 通过 for 循环遍历迭代器\n",
     "    for item in it:\n",
     "        print(item)\n",
     "\n",
-    "    # 通过 next 方法获取迭代器对象元素，由于 for 循环已经将迭代器对象迭代完，所以此时没有元素可迭代，会引发 StopIteration 异常\n",
+    "    # 通过 next 方法获取迭代器元素，由于 for 循环已经将迭代器迭代完，所以此时没有元素可迭代，会引发 StopIteration 异常\n",
     "    next(it)\n",
     "except StopIteration:\n",
-    "    print(\"迭代器对象已遍历完\")"
+    "    print(\"迭代器遍历完成\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 自定义迭代器\n"
+    "## 自定义迭代器\n",
+    "\n",
+    "迭代器类需要实现两个方法 `__iter__` 与 `__next__`，`__iter__` 返回迭代器对象本身，`__next__` 返回迭代器中的下一个元素，当迭代器中没有元素可供返回时，`__next__` 应引发 `StopIteration` 异常，以指示迭代的结束。\n",
+    "\n",
+    "当使用循环遍历迭代器时，循环会自动调用 `__next__` 方法来获取下一个元素，直到迭代结束。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +76,12 @@
       "2\n",
       "3\n",
       "4\n",
-      "迭代器对象已遍历完\n"
+      "迭代器遍历完成\n"
      ]
     }
    ],
    "source": [
-    "class ListIterable:\n",
+    "class MyIterator:\n",
     "    def __init__(self, my_list):\n",
     "        self.my_list = my_list\n",
     "        self.index = 0\n",
@@ -116,55 +101,140 @@
     "try:\n",
     "    list = [1, 2, 3, 4]\n",
     "\n",
-    "    it = ListIterable(list)\n",
+    "    # 生成列表迭代器\n",
+    "    it = MyIterator(list)\n",
     "\n",
     "    for item in it:\n",
     "        print(item)\n",
     "\n",
     "    next(it)\n",
     "except StopIteration:\n",
-    "    print(\"迭代器对象已遍历完\")"
+    "    print(\"迭代器遍历完成\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 生成器\n"
+    "## 可迭代对象\n",
+    "\n",
+    "可迭代对象是指内部实现了迭代器协议的对象。迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
+    "`iter` 方法可通过调用 `__iter__` 返回可迭代对象的迭代器对象。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 1 2 3 5 8 13 21 34 55 end\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "迭代器遍历完成\n"
      ]
     }
    ],
    "source": [
-    "def fibonacci(n):  # 生成器函数 - 斐波那契\n",
-    "    a, b, counter = 0, 1, 0\n",
-    "    while True:\n",
-    "        if counter > n:\n",
-    "            return\n",
-    "        yield a\n",
-    "        a, b = b, a + b\n",
-    "        counter += 1\n",
+    "class MyIterable:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return MyIterator(self.data)\n",
     "\n",
     "\n",
-    "f = fibonacci(10)  # f 是一个迭代器，由生成器返回生成\n",
+    "try:\n",
+    "    my_iterable = MyIterable([1, 2, 3, 4, 5])\n",
+    "    it = iter(my_iterable)\n",
     "\n",
-    "while True:\n",
-    "    try:\n",
-    "        print(next(f), end=\" \")\n",
-    "    except StopIteration:\n",
-    "        print(\"end\")\n",
-    "        break"
+    "    print(next(it))\n",
+    "\n",
+    "    for item in it:\n",
+    "        print(item)\n",
+    "\n",
+    "    next(it)\n",
+    "except StopIteration:\n",
+    "    print(\"迭代器遍历完成\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slot wrapper '__iter__' of 'bytes' objects>"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可迭代对象\n",
+    "\n",
+    "str.__iter__  # 字符串\n",
+    "tuple.__iter__  # 元组\n",
+    "list.__iter__  # 列表\n",
+    "set.__iter__  # 集合\n",
+    "dict.__iter__  # 字典\n",
+    "bytearray.__iter__  # 字节数组\n",
+    "bytes.__iter__  # 字节串"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生成器\n",
+    "\n",
+    "生成器（Generator）是一种特殊的迭代器，它使用函数的形式来定义，通过 yield 语句产生值。生成器函数可以暂停执行并在需要时恢复执行，从而实现按需生成值的效果。\n",
+    "\n",
+    "相比迭代器，生成器更简洁，更易于维护。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "生成器遍历完成\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    list = [1, 2, 3, 4]\n",
+    "\n",
+    "    def my_generator(val: list):\n",
+    "        for item in val:\n",
+    "            yield item\n",
+    "\n",
+    "    gen = my_generator(list)\n",
+    "\n",
+    "    for item in gen:\n",
+    "        print(item)\n",
+    "\n",
+    "    next(gen)\n",
+    "except StopIteration:\n",
+    "    print(\"生成器遍历完成\")"
    ]
   }
  ],
